updated markup in marketplace page

--- a/app/web/views/marketplace.erb
+++ b/app/web/views/marketplace.erb
@@ -26,25 +26,25 @@
 
 				<div class="form_container">
 					<h1>Have you some other ideas?</h1>
-					<form class="form-horizontal" role="form">
-						 <div class="form-group">
-							<label for="inputEmail3" class="col-md-5 control-label">Email</label>
-							<div class="col-md-7">
-							  <input type="email" class="form-control" id="inputEmail3" placeholder="email" >
+						<form class="form-horizontal" role="form">
+							<div class="form-group">
+								<label for="inputEmail3" class="col-sm-4 col-sm-offset-1 control-label">email</label>
+								<div class="col-sm-6">
+									<input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+								</div>
 							</div>
-						 </div>
-						 <div class="form-group">
-							<label for="inputPassword3" class="col-md-5 control-label" >What are you looking for?</label>
-							<div class="col-md-7">
-							  <textarea class="form-control" rows="3" id="inputWhat" placeholder="your message goes here"></textarea>
+							<div class="form-group">
+								<label for="inputPassword3" class="col-sm-4 col-sm-offset-1 control-label">What are you looking for?</label>
+								<div class="col-sm-6">
+									<input class="form-control" id="inputWhat" placeholder="your message goes here">
+								</div>
 							</div>
-						 </div>
-						 <div class="form-group">
-							<div class="col-sm-offset-5 col-md-2">
-							  <button type="submit" class="btn btn-default" id="submit" >TELL US</button>
+							<div class="form-group">
+								<div class="col-sm-offset-5 col-sm-9">
+									<button type="submit" class="btn btn-default" id="submit" >TELL US</button>
+								</div>
 							</div>
-						 </div>
-					</form>
+						</form>
 				</div><!-- end form_container -->
 		</div><!-- end marketplace_cont -->		
 	</div><!-- end container -->
