--- a/app/web/views/marketplace.erb
+++ b/app/web/views/marketplace.erb
@@ -28,9 +28,9 @@
 					<h1>Have you some other ideas?</h1>
 						<form class="form-horizontal" role="form">
 							<div class="form-group">
-								<label for="inputEmail3" class="col-sm-4 col-sm-offset-1 control-label">email</label>
+								<label for="inputEmail3" class="col-sm-4 col-sm-offset-1 control-label">Email</label>
 								<div class="col-sm-6">
-									<input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+									<input type="email" class="form-control" id="inputEmail3" placeholder="email">
 								</div>
 							</div>
 							<div class="form-group">
