added markup to _head.erb file

--- a/app/web/views/layouts/_head.erb
+++ b/app/web/views/layouts/_head.erb
@@ -1,4 +1,4 @@
-<title><%= [@title, 'evercam.io'].compact.join(' · ') %></title>
+<title><%= [@title, 'Evercam'].compact.join(' · ') %></title>
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 
 <link rel='icon' href='/img/favicon.ico' type='image/x-icon'>
