added markup to about page

--- a/app/web/views/about.erb
+++ b/app/web/views/about.erb
@@ -1,3 +1,4 @@
+	<% @title = 'About' %> 
 	<h1 class="center indent-1">Meet The Team</h1>
 			<div class="container">
 				<div class="row block-2">
@@ -75,7 +76,7 @@
 							  <img class="avatar" src="https://secure.gravatar.com/avatar/a96b36058b2f0e1f6f9966f7930f97f6?s=230">
 							  <h4>Daniel Caffrey</h4>
 							  <h5>Hacker</h5>
-							  <p>Asks to be fired on a daily basis</p>
+							  <p>Black and white in real life too</p>
 						</div>
 					</div>
 				</div> 				
