--- a/app/web/views/marketplace.erb
+++ b/app/web/views/marketplace.erb
@@ -1,3 +1,4 @@
+	<% @title = 'Marketplace' %> 
 	<div class="container">  
 		<div class="marketplace_cont">
 			<h1 class="center indent-1"><span>Marketplace</span></h1>
@@ -34,7 +35,7 @@
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="inputPassword3" class="col-sm-4 col-sm-offset-1 control-label">What are you looking for?</label>
+								<label for="inputPassword3" class="col-sm-3 col-sm-offset-2 control-label .hidden-xs">What are you looking for?</label>
 								<div class="col-sm-6">
 									<input class="form-control" id="inputWhat" placeholder="your message goes here">
 								</div>
