--- a/app/web/views/marketplace.erb
+++ b/app/web/views/marketplace.erb
@@ -29,13 +29,13 @@
 					<h1>Have you some other ideas?</h1>
 						<form class="form-horizontal" role="form">
 							<div class="form-group">
-								<label for="inputEmail3" class="col-sm-4 col-sm-offset-1 control-label">Email</label>
+								<label for="inputEmail3" class="col-sm-3 col-sm-offset-2 control-label">Email</label>
 								<div class="col-sm-6">
 									<input type="email" class="form-control" id="inputEmail3" placeholder="email">
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="inputPassword3" class="col-sm-3 col-sm-offset-2 control-label .hidden-xs">What are you looking for?</label>
+								<label for="inputPassword3" class="col-sm-3 col-sm-offset-2 control-label">What are you looking for?</label>
 								<div class="col-sm-6">
 									<input class="form-control" id="inputWhat" placeholder="your message goes here">
 								</div>
