updated link to marketplace page in header

--- a/app/web/views/layouts/_header.erb
+++ b/app/web/views/layouts/_header.erb
@@ -12,7 +12,7 @@
             <li class='hidden-sm'><a href='/'>Home</a></li>
             <li><a href='/connect'>Connect</a></li>
             <li><a href='/docs'>Develop</a></li>
-            <li><a href='#'>Marketplace</a></li>
+            <li><a href='/marketplace'>Marketplace</a></li>
             <li><a href='/login'>Sign In</a></li>
           </ul>
         </div>
