updated page title to capitalize evercam

--- a/app/web/views/login.erb
+++ b/app/web/views/login.erb
@@ -1,5 +1,5 @@
 <div class='col-sm-6 col-sm-offset-3'>
-  <h1><%= @title = 'Sign In' %></h1>
+  <h1><%= @title = 'Login' %></h1>
 
   <form role='form', method='POST'>
 
