--- a/app/web/views/marketplace.erb
+++ b/app/web/views/marketplace.erb
@@ -29,15 +29,15 @@
 					<h1>Have you some other ideas?</h1>
 						<form class="form-horizontal" role="form">
 							<div class="form-group">
-								<label for="inputEmail3" class="col-sm-3 col-sm-offset-2 control-label">Email</label>
-								<div class="col-sm-6">
+								<label for="inputEmail3" class="col-sm-4 col-sm-offset-1 control-label">Email</label>
+								<div class="col-sm-5">
 									<input type="email" class="form-control" id="inputEmail3" placeholder="email">
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="inputPassword3" class="col-sm-3 col-sm-offset-2 control-label">What are you looking for?</label>
-								<div class="col-sm-6">
-									<input class="form-control" id="inputWhat" placeholder="your message goes here">
+								<label for="inputPassword3" class="col-sm-4 col-sm-offset-1 control-label">What are you looking for?</label>
+								<div class="col-sm-5">
+									<textarea class="form-control" id="inputWhat" placeholder="your message goes here"></textarea>
 								</div>
 							</div>
 							<div class="form-group">
