--- a/app/web/views/login.erb
+++ b/app/web/views/login.erb
@@ -1,23 +1,26 @@
-<div class='col-sm-8 col-sm-offset-2'>
-	<h1><%= @title = 'Sign In' %></h1>
-	<div class ="signIn">
-		<form role='form', method='POST'>
+<div class='col-sm-10 col-sm-offset-1'>
+	<div class="form_container">
+		<div class ="signIn">
+			<h1><%= @title = 'Sign In' %></h1>
+			<div class="row">
+				<div class="col-sm-10 col-sm-offset-1">
+				
+						<form role='form', method='POST'>
+							<div class='form-group'>
+								<label for='username'>Username or Email</label>
+								<input class='form-control' name='username' type='text' id ="inputEmail3" placeholder='username or email' required>
+							</div>
+							<div class='form-group'>
+								<label for='password'>Password</label>
+								<input class='form-control' id ="inputEmail3" name='password' type='password' placeholder='password' required>
+							</div>
+							<button type='submit' class='btn btn-primary pull-right' id="submit">Sign In</button>
+						</form>
 
-			<div class='form-group'>
-			  <label for='username'>Username or Email</label>
-			  <input class='form-control' name='username' type='text' id ="inputEmail3" placeholder='username or email' required>
+				</div>
 			</div>
-
-			<div class='form-group'>
-			  <label for='password'>Password</label>
-			  <input class='form-control' id ="inputEmail3" name='password' type='password' placeholder='password' required>
-			</div>
-
-			<button type='submit' class='btn btn-primary pull-right' id="submit">
-			  Sign In
-			</button>
-
-		</form>
+		</div>
 	</div>
 </div>
+
 
