--- a/app/web/views/about.erb
+++ b/app/web/views/about.erb
@@ -68,7 +68,7 @@
 							  <img class="avatar" src="https://secure.gravatar.com/avatar/cc024f0ae73608a3d00e77cd54373c82?s=230">
 							  <h4>Ronan Byrne</h4>
 							  <h5>Intern Developer</h5>
-							  <p>Big Javascript book sitting on his desk</p>
+							  <p>Big JavaScript book sitting on his desk</p>
 						</div>
 					</div>
 					<div class="member">
@@ -95,7 +95,7 @@
 							  <img class="avatar" src="https://secure.gravatar.com/avatar/bc5816bd84db9de699f207423d55db18?s=230">
 							  <h4>Shakeel Anjum</h4>
 							  <h5>Hacker</h5>
-							  <p>Malaria Survivor & gentle soul</p>
+							  <p>Malaria survivor & gentle soul</p>
 						</div>
 					</div>
 					<div class="member">
