--- a/app/web/views/layouts/_header.erb
+++ b/app/web/views/layouts/_header.erb
@@ -8,7 +8,7 @@
 			  <img id='logo' src='/img/logo.svg'>
 			</a>
 		  </h1>
-		  <ul class='nav tm-navbar navbar-nav sf-menu'>
+		  <ul class='nav tm-navbar navbar-nav sf-menu' role="navigation">
 			<li class='hidden-sm'><a href='/'>Home</a></li>
 			<li><a href='/connect'>Connect</a></li>
 			<li><a href='/docs'>Develop</a></li>
