--- a/app/web/views/media.erb
+++ b/app/web/views/media.erb
@@ -134,4 +134,26 @@
 				</div>
 			</div>		
 		</div><!-- end row -->
+		<div class="row">
+			<div class="img_container">
+				<div class="col-sm-6 ">
+					<img src="img/App_Icon_RED_512x512.png" width="90px" alt="logo">
+					<p class="imgFile"><a href="">PNG</a></p>
+					<p class="imgSize">512x512</p>
+				</div>
+				<div class="col-sm-6 ">
+					<img src="img/App_Icon_RED_512x512.png" width="90px" alt="logo">
+					<p class="imgFile"><a href="">PNG</a></p>
+					<p class="imgSize">192x192</p>
+				</div>
+			</div>		
+		</div><!-- end row -->
+		<div class="row">
+			<div class="img_container">
+				<div class="col-sm-6 ">
+					<img src="img/App_Icon_RED_512x512.png" width="90px" alt="logo">
+					<p class="imgFile"><a href="">SVG</a></p>
+				</div>
+			</div>		
+		</div><!-- end row -->
 	</div><!-- end container -->
