--- a/app/web/views/layouts/_header.erb
+++ b/app/web/views/layouts/_header.erb
@@ -9,7 +9,7 @@
 			</a>
 		  </h1>
 		  <ul class='nav tm-navbar navbar-nav sf-menu'>
-			<li><a href='/'>Home</a></li>
+			<li class='hidden-sm><a href='/'>Home</a></li>
 			<li><a href='/connect'>Connect</a></li>
 			<li><a href='/docs'>Develop</a></li>
 			<li><a href='/marketplace'>Marketplace</a></li>
