started move of /vendors to /models with documentation update

--- a/app/web/public/css/template.bootstrap.css
+++ b/app/web/public/css/template.bootstrap.css
@@ -451,16 +451,15 @@ header #logo {
 }
 
 .left-nav h1 {
-  font-size: 1.2em;
-  margin-top: 56px;
+  font-size: 1em;
   text-transform: uppercase;
+  margin: 10px 0px;
   padding: 0px;
 }
 
 .left-nav ol,
 .left-nav ul {
   padding: 0px;
-  /**padding-left: 10px;*****/
 }
 
 .left-nav ol li,
