--- a/app/web/views/layouts/docs.erb
+++ b/app/web/views/layouts/docs.erb
@@ -25,7 +25,7 @@
             <ul>
               <li><a href='/docs/api/v1/authentication'>Authentication</a></li>
               <li><a href='/docs/api/v1/snapshots'>Snapshots</a></li>
-              <li><a href='/docs/api/v1/vendors'>Vendors</a></li>
+              <li><a href='/docs/api/v1/models'>Models</a></li>
               <li><a href='/docs/api/v1/users'>Users</a></li>
             </ul>
             </li>
