--- a/app/web/views/layouts/_header.erb
+++ b/app/web/views/layouts/_header.erb
@@ -3,18 +3,35 @@
     <div class='row'>
       <div class='col-sm-12'>
         <div class='header-block clearfix'>
-		  <h1>
-			<a class='navbar-brand' href='/'>
-			  <img id='logo' src='/img/logo.svg'>
-			</a>
-		  </h1>
-		  <ul class='nav tm-navbar navbar-nav sf-menu'>
-			<li class='hidden-sm><a href='/'>Home</a></li>
-			<li><a href='/connect'>Connect</a></li>
-			<li><a href='/docs'>Develop</a></li>
-			<li><a href='/marketplace'>Marketplace</a></li>
-			<li><a href='/login'>Sign In</a></li>
-		  </ul>
+		<nav class="navbar navbar-default" role="navigation">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<h1>
+				<a class='navbar-brand' href='/'>
+				<img id='logo' src='/img/logo.svg'>
+				</a>
+				</h1>
+			</div>
+		  
+		  
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			  <ul class='nav tm-navbar navbar-nav sf-menu'>
+				<li class='hidden-sm><a href='/'>Home</a></li>
+				<li><a href='/connect'>Connect</a></li>
+				<li><a href='/docs'>Develop</a></li>
+				<li><a href='/marketplace'>Marketplace</a></li>
+				<li><a href='/login'>Sign In</a></li>
+			  </ul>
+			</div>
+		</nav>
+		
+		
+		
         </div>
       </div>
     </div>
