updated markup to include SVG image files to media page

--- a/app/web/views/media.erb
+++ b/app/web/views/media.erb
@@ -4,12 +4,12 @@
 		<div class="row">
 			<div class="img_container">
 				<div class="col-sm-6 ">
-					<img src="img/evercam_logo.png" width="380px" alt="logo">
+					<img src="/img/evercam_original.svg" alt="logo">
 					<p class="imgFile"><a href="">PNG</a></p>
 					<p class="imgSize">100x60</p>
 				</div>
 				<div class="col-sm-6 ">
-					<img src="img/evercam_logo.png" width="380px" alt="logo">
+					<img src="/img/evercam_original.svg" alt="logo">
 					<p class="imgFile"><a href="">PNG</a></p>
 					<p class="imgSize">250x150</p>
 				</div>
@@ -18,26 +18,38 @@
 		<div class="row">
 			<div class="img_container">
 				<div class="col-sm-6 ">
-					<img src="img/evercam_logo_prgCam.png" width="380px" alt="logo programmable">
-					<p class="imgFile"><a href="">PNG</a></p>
-					<p class="imgSize">100x60</p>
+					<img src="/img/evercam_original.svg" alt="logo">
+					<p class="imgFile"><a href="">SVG</a></p>
 				</div>
 				<div class="col-sm-6 ">
-					<img src="img/evercam_logo_prgCam.png" width="380px" alt="logo programmable">
+					<img src="/img/Logo_PrgCamera.svg" alt="logo programmable">
 					<p class="imgFile"><a href="">PNG</a></p>
-					<p class="imgSize">250x150</p>
+				<p class="imgSize">100x60</p>
 				</div>
 			</div>		
 		</div><!-- end row -->
 		<div class="row">
 			<div class="img_container">
 				<div class="col-sm-6 ">
-					<img src="img/ex_6.png" height="100px">
+					<img src="/img/Logo_PrgCamera.svg" alt="logo programmable">
+					<p class="imgFile"><a href="">SVG</a></p>
+					<p class="imgSize">250x150</p>
+				</div>
+				<div class="col-sm-6 ">
+					<img src="/img/Logo_PrgCamera.svg" alt="logo programmable">
+					<p class="imgFile"><a href="">SVG</a></p>
+				</div>
+			</div>		
+		</div><!-- end row -->
+		<div class="row">
+			<div class="img_container">
+				<div class="col-sm-6 ">
+					<img src="/img/Logo_e.svg" height="100px" alt="logo e">
 					<p class="imgFile"><a href="">PNG</a></p>
 					<p class="imgSize">50x50</p>
 				</div>
 				<div class="col-sm-6 ">
-					<img src="img/ex_6.png" height="100px">
+					<img src="/img/Logo_e.svg" height="100px" alt="logo e">
 					<p class="imgFile"><a href="">SVG</a></p>
 				</div>
 			</div>		
@@ -45,24 +57,26 @@
 		<div class="row">
 			<div class="img_container">
 				<div class="col-sm-6 ">
-					<img src="img/evercam_logo.png" width="380px" alt="logo">
-					<p class="imgFile"><a href="">SVG</a></p>
-				</div>
-				<div class="col-sm-6 ">
-					<img src="img/evercam_logo_prgCam.png" width="380px" alt="logo">
-					<p class="imgFile"><a href="">SVG</a></p>
-				</div>
-			</div>		
-		</div><!-- end row -->
-		<div class="row">
-			<div class="img_container">
-				<div class="col-sm-6 ">
-					<img src="img/mkCamerasPrg.png" width="380px" alt="logo">
+					<img src="/img/mkCamerasPrg.svg" alt="making cameras programmable">
 					<p class="imgFile"><a href="">PNG</a></p>
 					<p class="imgSize">100x60</p>
 				</div>
 				<div class="col-sm-6 ">
-					<img src="img/mkCamerasPrg.png" width="380px" alt="logo">
+					<img src="/img/mkCamerasPrg.svg" alt="making cameras programmable">
+					<p class="imgFile"><a href="">PNG</a></p>
+					<p class="imgSize">250x150</p>
+				</div>
+			</div>		
+		</div><!-- end row -->
+		
+		<div class="row">
+			<div class="img_container">
+				<div class="col-sm-6 ">
+					<img src="/img/mkCamerasPrg.svg" alt="making cameras programmable">
+					<p class="imgFile"><a href="">SVG</a></p>
+				</div>
+				<div class="col-sm-6 ">
+					<img src="/img/Logo_cameraUnleashed.svg" alt="cameras unleashed">
 					<p class="imgFile"><a href="">PNG</a></p>
 					<p class="imgSize">250x150</p>
 				</div>
@@ -71,87 +85,60 @@
 		<div class="row">
 			<div class="img_container">
 				<div class="col-sm-6 ">
-					<img src="img/mkCamerasPrg.png" width="380px" alt="logo">
-					<p class="imgFile"><a href="">PNG</a></p>
-				</div>
-				<div class="col-sm-6 ">
-					<img src="img/Logo_camerasUleashed_400x110.png" width="380px" alt="logo">
+					<img src="/img/Logo_cameraUnleashed.svg" alt="cameras unleashed">
 					<p class="imgFile"><a href="">PNG</a></p>
 					<p class="imgSize">100x60</p>
+				</div>
+				<div class="col-sm-6 ">
+					<img src="/img/Logo_cameraUnleashed.svg" alt="cameras unleashed">
+					<p class="imgFile"><a href="">SVG</a></p>
 				</div>
 			</div>		
 		</div><!-- end row -->
 		<div class="row">
 			<div class="img_container">
 				<div class="col-sm-6 ">
-					<img src="img/Logo_camerasUleashed_400x110.png" width="380px" alt="logo">
+					<img src="/img/incrCamFunction.svg" alt="increasing cameras functionality">
 					<p class="imgFile"><a href="">PNG</a></p>
 					<p class="imgSize">250x150</p>
 				</div>
 				<div class="col-sm-6 ">
-					<img src="img/Logo_camerasUleashed_400x110.png" width="380px" alt="logo">
-					<p class="imgFile"><a href="">SVG</a></p>
+					<img src="/img/incrCamFunction.svg" alt="increasing cameras functionality">
+					<p class="imgFile"><a href="">PNG</a></p>
+					<p class="imgSize">100x60</p>
 				</div>
 			</div>
 		</div><!-- end row -->
 		<div class="row">
 			<div class="img_container">
 				<div class="col-sm-6 ">
-					<img src="img/incrCamFunction_500x125.png" width="380px" alt="logo">
-					<p class="imgFile"><a href="">PNG</a></p>
-					<p class="imgSize">100x60</p>
-				</div>
-				<div class="col-sm-6 ">
-					<img src="img/incrCamFunction_500x125.png" width="380px" alt="logo">
-					<p class="imgFile"><a href="">PNG</a></p>
-					<p class="imgSize">250x150</p>
-				</div>
-			</div>		
-		</div><!-- end row -->
-		<div class="row">
-			<div class="img_container">
-				<div class="col-sm-6 ">
-					<img src="img/incrCamFunction_500x125.png" width="380px" alt="logo">
+					<img src="/img/incrCamFunction.svg" alt="increasing cameras functionality">
 					<p class="imgFile"><a href="">SVG</a></p>
 				</div>
-			</div>	
-			<div class="col-sm-6 ">
-				<img src="img/App_icon_mediaPage.png" width="90px" alt="logo">
-				<p class="imgFile"><a href="">PNG</a></p>
-				<p class="imgSize">512x512</p>
-			</div>			
+				<div class="col-sm-6 ">
+					<img src="/img/App_icon_512x512.png" width="120px" alt="App Icon">
+					<p class="imgFile"><a href="">PNG</a></p>
+					<p class="imgSize">50x50</p>
+				</div>
+			</div>		
 		</div><!-- end row -->
 		<div class="row">
 			<div class="img_container">
 				<div class="col-sm-6 ">
-					<img src="img/App_icon_mediaPage.png" width="90px" alt="logo">
-					<p class="imgFile"><a href="">PNG</a></p>
-					<p class="imgSize">192x192</p>
-				</div>
-				<div class="col-sm-6 ">
-					<img src="img/App_icon_mediaPage.png" width="90px" alt="logo">
+					<img src="/img/App_icon_512x512.png" width="120" alt="App Icon">
 					<p class="imgFile"><a href="">SVG</a></p>
 				</div>
-			</div>		
-		</div><!-- end row -->
-		<div class="row">
-			<div class="img_container">
 				<div class="col-sm-6 ">
-					<img src="img/App_Icon_RED_512x512.png" width="90px" alt="logo">
+					<img src="/img/e_RED_DOT.svg" width="120px" alt="Favicon Red Dot">
 					<p class="imgFile"><a href="">PNG</a></p>
-					<p class="imgSize">512x512</p>
-				</div>
-				<div class="col-sm-6 ">
-					<img src="img/App_Icon_RED_512x512.png" width="90px" alt="logo">
-					<p class="imgFile"><a href="">PNG</a></p>
-					<p class="imgSize">192x192</p>
+					<p class="imgSize">50x50</p>
 				</div>
 			</div>		
 		</div><!-- end row -->
 		<div class="row">
 			<div class="img_container">
 				<div class="col-sm-6 ">
-					<img src="img/App_Icon_RED_512x512.png" width="90px" alt="logo">
+					<img src="/img/e_RED_DOT.svg" width="120" alt="Favicon Red Dot">
 					<p class="imgFile"><a href="">SVG</a></p>
 				</div>
 			</div>		
