updated documentation for the new /vendors endpoint

--- a/app/web/views/docs/api/v1/models.erb
+++ b/app/web/views/docs/api/v1/models.erb
@@ -3,7 +3,7 @@
 The models section of the API covers all operations which return information about camera manufacturers and the known model configurations and variants. This information is being continually updated by Evercam and as such, it is not recommended to cache this data locally within your own application for longer than nessesary.
 </p>
 
-<%= partial('docs/api/v1/_public') %>
+<%= partial('docs/api/v1/_is_public') %>
 
 <h4>GET /v1/models</h4>
 <p>
