updated markup and styles to header

--- a/app/web/public/css/template.bootstrap.css
+++ b/app/web/public/css/template.bootstrap.css
@@ -324,6 +324,7 @@ header {
   background: #fff;
 }
 
+
 header h1 {
   display: inline-block;
   float: left;
@@ -336,6 +337,8 @@ header h1 {
   font-weight: normal;
   font-family: 'Pacifico', cursive;
 }
+
+
 
 header h1 a.navbar-brand {
   font-size: 50px;
@@ -1375,6 +1378,13 @@ footer span a:hover {
 
 @media (min-width: 768px) and (max-width: 991px) {
 
+.tm-navbar{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+
   .container {
     padding: 0
   }
@@ -1535,6 +1545,14 @@ footer span a:hover {
 
 @media (min-width: 626px) and (max-width: 767px) {
 
+.header-block h1 {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 308px;
+	float: none;
+  }
+
   .nav-tabs {
     margin: -5px 0 0 -5px
   }
@@ -1568,7 +1586,27 @@ footer span a:hover {
 
 }
 
+@media (min-width: 768px) and (max-width: 991px) {
+
+.header-block h1 {
+	display: block; 
+	margin-left: auto;
+	margin-right: auto;
+	width: 308px;
+	float: none;
+  }
+}
+
 @media (min-width: 482px) and (max-width: 625px) {
+
+.header-block h1 {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 308px;
+	float: none;
+  }
+
 
   .nav-tabs {
     margin: -5px 0 0 -5px
