--- a/app/web/views/layouts/_header.erb
+++ b/app/web/views/layouts/_header.erb
@@ -1,7 +1,7 @@
 <header id='header'>
 	<div class='container'>
 		<div class='row'>
-			<div class='col-sm-3'>
+			<div class='col-md-3'>
 				<div class='header-block clearfix'>
 					<h1>
 						<a class='navbar-brand' href='/'>
@@ -10,7 +10,7 @@
 					</h1>
 				</div>
 			</div>
-			<div class='col-sm-7 col-sm-offset-2'>
+			<div class='col-md-7 col-md-offset-2'>
 				<nav class="navbar navbar-default" role="navigation">
 					<div class="navbar-header">
 						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse">
