--- a/app/web/views/docs/api/v1/models.erb
+++ b/app/web/views/docs/api/v1/models.erb
@@ -1,25 +1,21 @@
 <h1>Models</h1>
-<p>
-The models section of the API covers all operations which return information about camera manufacturers and the known model configurations and variants. This information is being continually updated by Evercam and as such, it is not recommended to cache this data locally within your own application for longer than nessesary.
-</p>
 
 <%= partial('docs/api/v1/_is_public') %>
 
 <h4>GET /v1/models</h4>
 <p>
-This operation returns a list of all IP camera vendors along with any MAC address prefixes they are known to use and the list of model names we currently hold configuration information about on Evercam. Further information for a particular model is avaiable through one of the more specific endpoints listed below.
+This operation returns a list of all IP camera vendors along with any MAC address prefixes they are known to use and the list of model names we currently hold configuration information about on Evercam. For a full list of all known hardware vendors please see the <a href='vendors'>/v1/vendors</a> endpoint. Further information for a particular model is available through the more specific <strong>/models/{vendor}/{model}</strong> endpoint listed below. Note that the <strong>"*"</strong> model denotes the set of fallback configuration values to try for an unknown model from this vendor.
 </p>
-<p>
-A typical <span class='badge'>curl</span> command to GET the data for all IP camera vendors would look like this:
-</p>
+<h5>Example Request</h5>
 <pre><code class='http'>curl -X GET https://api.evercam.io/v1/models
 </code></pre>
+<h5>Example Response</h5>
 <pre><code class='json'>{
   "vendors": [{
     "id": "ycam",
     "name": "Y-cam Solutions",
     "known_macs": ["00:0D:F0"],
-    "models": ["YCW005", "YCB005", "YCWHD5", ... ]
+    "models": ["*", "YCW005", "YCB005", "YCWHD5", ... ]
   },{
     "id": "tplink",
     ...
@@ -29,57 +25,45 @@ A typical <span class='badge'>curl</span> command to GET the data for all IP cam
 
 <h4>GET /v1/models/{vendor}</h4>
 <p>
-This operation returns the generic defaults and capability information for a particular vendor. It can be used as a model configuration of last resort in cases where an exact name is unknown or is not currently listed on Evercam. It should be noted that the details provided via this endpoint may not be correct for your particular model and as such, more accurate information should be retrieved via the specific model call where possible.
+Similar to above, this operation returns a list of models for a given IP camera vendor. Provided the <strong>{vendor}</strong> actually exists and is supported by Evercam, the server will respond with a <span class='label label-success'>200 OK</span> status and the vendor data. If the specified <strong>{vendor}</strong> does not exist or is not a manufacturer of IP camera equipment supported by Evercam the server will return a <span class='label label-danger'>404 NOT FOUND</span> status. The array of vendors returned from this endpoint should only ever contain one item. Note that the <strong>"*"</strong> model denotes the set of fallback configuration values to try for an unknown model from this vendor.
 </p>
-<p>
-A typical <span class='badge'>curl</span> command to GET the generic model data for a particular vendor would look like this:
-</p>
-<pre><code class='http'>curl -X GET https://api.evercam.io/v1/models/ubiquiti
+<h5>Example Request</h5>
+<pre><code class='http'>curl -X GET https://api.evercam.io/v1/models/ycam
 </code></pre>
+<h5>Example Response</h5>
 <pre><code class='json'>{
   "vendors": [{
-    "id": "ubiquiti",
-    "name": "Ubiquiti Networks",
-    "known_macs": ["04:18:D6"],
-    "firmwares": [{
-      "name": "*",
-      "auth": {
-        "basic": {
-          "username": "aaaa",
-          "password": "bbbb"
-        }
-      }
-    }]
+    "id": "ycam",
+    "name": "Y-cam Solutions",
+    "known_macs": ["00:0D:F0"],
+    "models": ["*", "YCW005", "YCB005", "YCWHD5", ... ]
   }]
 }
 </code></pre>
 
 <h4>GET /v1/models/{vendor}/{model}</h4>
 <p>
-This operation matches a known MAC address (first three octects or all six) with possible vendors and returns all information for those vendors including default settings for known different firmware configurations.
+This operation returns the specific defaults and capabilities configuration data Evercam stores for a given camera model from a particular hardware vendor. Provided the <strong>{vendor}</strong> and <strong>{model}</strong> actually exist and are supported by Evercam, the server will respond with a <span class='label label-success'>200 OK</span> status and the model data. If the specified <strong>{vendor}</strong> or <strong>{model}</strong> does not exist or is not supported by Evercam the server will return a <span class='label label-danger'>404 NOT FOUND</span> status. The array of models returned from this endpoint should only ever contain one item.
 </p>
-<p>
-A typical <span class='badge'>curl</span> command to GET the data for a particular model would look like this:
-</p>
+<h5>Example Request</h5>
 <pre><code class='http'>curl -X GET https://api.evercam.io/v1/models/ycam/YCW005
 </code></pre>
+<h5>Example Response</h5>
 <pre><code class='json'>{
-  "vendors": [{
-    "id": "ubiquiti",
-    "name": "Ubiquiti Networks",
-    "known_macs": ["04:18:D6"],
-    "firmwares": [{
-      "name": "*",
+  "models": [{
+    "vendor": "ycam",
+    "name": "YCW005",
+    "defaults": {
+      "snapshots": {
+        "jpg": "/Streaming/channels/1/picture"
+      },
       "auth": {
         "basic": {
-          "username": "aaaa",
-          "password": "bbbb"
+          "username": "admin",
+          "password": "12345"
         }
       }
-    }]
-  },{
-    "id": "tplink",
-    ...
+    }
   }]
 }
 </code></pre>
