--- a/app/web/public/css/template.bootstrap.css
+++ b/app/web/public/css/template.bootstrap.css
@@ -880,6 +880,7 @@ ul.list-testimonials li:first-child {
 
 .map {
   margin: 48px 0 0px 0;
+  padding-bottom: 60px;
   overflow: hidden;
   line-height: 0;
   font-size: 0;
@@ -890,7 +891,7 @@ ul.list-testimonials li:first-child {
 
 .map iframe {
   width: 100%;
-  height: 382px;
+  height: 300px;
   border: none;
   border-radius: 4px;
 }
@@ -1689,7 +1690,7 @@ footer span a:hover {
   }
 
   .map iframe {
-    height: 250px
+    height: 150px
   }
 
 }
@@ -2200,3 +2201,80 @@ color: #eb5f53;
   text-transform: uppercase;
 }
 
+/************contact page********************/
+
+.contact-form  #email{
+	display: block;
+	border: 1px solid #eb5f53;
+	width: 100%;
+	height: 60px;
+	padding: 6px 12px;
+	font-size: 24px;
+	line-height: 1.428571429;
+	color: #555;
+	vertical-align: middle;
+	background-color: #fff;
+	background-image: none;
+	border-radius: 4px;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+	-webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+	transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
+.contact-form  #name{
+	display: block;
+	border: 1px solid #eb5f53;
+	width: 100%;
+	height: 60px;
+	padding: 6px 12px;
+	font-size: 24px;
+	line-height: 1.428571429;
+	color: #555;
+	vertical-align: middle;
+	background-color: #fff;
+	background-image: none;
+	border-radius: 4px;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+	-webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+	transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+.contact-form  #message{
+	display: block;
+	border: 1px solid #eb5f53;
+	width: 98%;
+	height: 100%;
+	padding: 6px 12px;
+	font-size: 24px;
+	line-height: 1.428571429;
+	color: #555;
+	vertical-align: middle;
+	background-color: #fff;
+	background-image: none;
+	border-radius: 4px;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+	-webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+	transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+.contactform_container{
+	padding: 40px 2px 30px 0px;
+	margin: 10px 0px 30px 0px;
+	/*border: 1px solid #dddbdb;*/
+	-webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+	background: #efeeee;
+	font-size: 25px;
+}
+
+.contactform_container h1{
+	font-size: 33px;
+	padding: 20px 0px 30px 0px;
+	text-align: center;
+}
+
+.address{
+	margin-top: 60px;
+}
