--- a/app/web/views/contact.erb
+++ b/app/web/views/contact.erb
@@ -1,6 +1,5 @@
- <div class="container">
-     
-  <div class="row">    
+<div class="container">
+	<div class="row">    
 		<div class="col-sm-10 col-sm-offset-1">
 			<h3>Contact Us</h3>
 			<div class="contactform_container">
@@ -26,29 +25,24 @@
 						</div>
 					</div>
 				</form>
-			</div><!-- end form_container -->
-
-	
-	<div class="address">
-		<div class="col-md-6">
-			<h4>Dublin Office</h4>
-			<p>12 Parnell Square East, Dublin 1, <br/>Ireland</p>
-			<p>Telephone:  +353 (1) 538 3333</p>
-			<p>E-Mail: <a href="mailto:info@evercam.io">info@evercam.io</a></p>
-			<div class="map"><iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zo2fMMAkgMMs.kzJ0biOyIYMo" width="640" height="480"></iframe></small></div>
-		</div>
-		<div class="col-md-6">
-			<h4>Californian Office</h4>
-			<p>800 W. El Camino Real, Suite 350, Mountain View,<br/> CA 94040, USA</p>
-			<p>Telephone:  +353 (1) 538 3333</p>
-			<p>E-Mail: <a href="mailto:info@evercam.io">info@evercam.io</a></p>
-			<div class="map"><iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zo2fMMAkgMMs.kzJ0biOyIYMo" width="640" height="480"></iframe></div>
-		</div>
-	</div>
-
-    <div class="row">    
-    <div class="col-sm-12 col-md-12 col-lg-12">
-    	<div class="map"><iframe src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Brooklyn,+New+York,+NY,+United+States&amp;aq=0&amp;sll=37.0625,-95.677068&amp;sspn=61.282355,146.513672&amp;ie=UTF8&amp;hq=&amp;hnear=Brooklyn,+Kings,+New+York&amp;ll=40.649974,-73.950005&amp;spn=0.01628,0.025663&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe></div>
-    </div>
-  </div> 
- </div> 
+			</div><!-- end contactform_container -->
+			<div class="address">
+				<div class="col-md-6">
+					<h4>Dublin</h4>
+					<p>12 Parnell Square East, Dublin 1, <br/>Ireland</p>
+					<p>Telephone:  +353 (1) 538 3333</p>
+					<p>E-Mail: <a href="mailto:info@evercam.io">info@evercam.io</a></p>
+					<div class="map"><iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zo2fMMAkgMMs.kuabCDr3nlic" width="640" height="480"></iframe></small></div>
+				</div>
+				<div class="col-md-6">
+					<h4>Silicon Valley</h4>
+					<p>800 W. El Camino Real, Suite 350, Mountain View,<br/> CA 94040, USA</p>
+					<p>Telephone:  +353 (1) 538 3333</p>
+					<p>E-Mail: <a href="mailto:info@evercam.io">info@evercam.io</a></p>
+					<div class="map"><iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zo2fMMAkgMMs.kzJ0biOyIYMo" width="640" height="480"></iframe></div>
+				</div>
+			</div><!-- end address -->
+		</div> 
+	</div> 
+</div>
+ 
