--- a/app/web/views/layouts/_header.erb
+++ b/app/web/views/layouts/_header.erb
@@ -21,12 +21,13 @@
 						</button>
 					</div>
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse">
-						 <ul class='nav navbar-nav tm-navbar'>
+						<ul class='nav navbar-nav tm-navbar'>
 							<li><a href='/'>Home</a></li>
 							<li><a href='/connect'>Connect</a></li>
 							<li><a href='/docs'>Develop</a></li>
 							<li><a href='/marketplace'>Marketplace</a></li>
-							<li><a href='/login'>Sign In</a></li>
+							<li class="dropdown">
+							<li><a href="/login">Sign In</a></li>
 						</ul>
 					</div>
 				</nav>
@@ -34,4 +35,3 @@
 		 </div>
     </div>
 </header>
-
